Name: hBDD
Version: 0.0.2
Cabal-version: >= 1.2
Build-type: Simple
Copyright: (C) 2002-2005, 2009 University of New South Wales, (C) 2009-2011 Peter Gammie
Maintainer: peteg42@gmail.com
Author: Peter Gammie
License: LGPL
License-file: COPYING.LIB
Synopsis: An abstraction layer for BDD libraries
Category: Data
Description:

 hBDD provides a high-level API to the CUDD and CMU Boolean Decision
 Diagram libraries.

Extra-Source-Files: AUTHORS INSTALL README TODO

Library
  Build-depends: base
  extensions: TypeFamilies TypeSynonymInstances
  exposed-modules: Data.Boolean, Data.Boolean.BF, Data.Boolean.Relation
  ghc-options: -Wall
