Name: CUDD
Version: 0.1.0
Cabal-version: >= 1.2
Build-type: Simple
Copyright: (C) [2002..2005], 2009 University of New South Wales
Maintainer: peteg42@gmail.com
Author: Peter Gammie
License: LGPL
Synopsis: An FFI binding to the CUDD library
Description:

 HBDD provides a high-level API to the CUDD and CMU Boolean Decision
 Diagram libraries; this is the CUDD part of it.

extra-source-files: im/cudd_im.c im/cudd_im.h

Library
  build-Tools: c2hs
  build-depends: base, containers, hbdd == 0.1.0, unix
  extensions: ForeignFunctionInterface TypeFamilies
  exposed-modules: Data.Boolean.CUDD
  includes: stdio.h cudd.h
  include-dirs: im
  c-sources: im/cudd_im.c
  ghc-options: -Wall
  if os(darwin)
    -- We're guessing that they've used MacPorts to install CUDD
    -- This builds a .dylib
    include-dirs: /opt/local/include/cudd
    extra-lib-dirs: /opt/local/lib/cudd
    extra-libraries: cudd
  if os(linux)
    extra-libraries: cudd, mtr, st, util, epd
